updated portfolio website

--- a/css/style.css
+++ b/css/style.css
@@ -364,9 +364,12 @@ header.sticky {
 
 .row img {
     width: 100%;
+    height: 20rem;
     border-radius: 8px;
     display: block;
     transition: transform 0.5s;
+    object-fit: cover;
+    object-position: top;
 }
 
 .row:hover img {
